# hello-cmake

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.cpp
hello/: CMakeLists.txt
hello/include/: HelloClass.h
hello/src/: HelloClass.cpp
main/: CMakeLists.txt
main/src/: main.cpp
src/: CMakeLists.txt  main.cpp
